# ilutsim_app

./: .clinerules  .env.docker  .env.production.example  .gitignore  .~lock.דוגמה_אילוצים_מאבטחים.xlsx#  APP_OVERVIEW.md  CLAUDE.md  COMBINED_FOR_MANAGERS.md  DEPLOY_RAILWAY.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  SCHEDULING_FOR_MANAGERS.md  SCHEDULING_PLAN.md  SETUP.md  SYSTEM_STATUS_FOR_MANAGERS.md  TEST_GRAPH.md  constraints_11a6c9fe-7364-4c1f-ab65-e03b7577497c.xlsx  dev-stop.sh  dev.sh  features  אילוצים_דמו_מלא.xlsx  דוגמה_אילוצים_מאבטחים.xlsx
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  constants.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  messages.py  scheduler.py  seed.py
backend/tests/: conftest.py  test_admin_published_guard.py  test_admin_submission.py  test_auth_hardening.py  test_auto_advance.py  test_auto_open_catchup.py  test_auto_open_lock.py  test_automation_scheduler.py  test_bot.py  test_config.py  test_controllers.py  test_current_week.py  test_date_utils.py  test_e2e.py  test_export.py  test_import_commit.py  test_initial_seed.py  test_models.py  test_notification_on_open.py  test_open_week.py  test_position_api.py  test_position_model.py  test_position_service.py  test_profile_api.py  test_profile_service.py  test_repositories.py  test_retention.py  test_schemas.py  test_settings_service.py  test_status_transitions.py  test_submission_guard.py  test_submission_notification.py  test_submission_persistence.py  test_telegram_auth.py  test_telegram_token_apply.py  (+1 more)
(+222 files in other folders)
